fix scroll on mobile

--- a/src/app/photography-page/photography-grid/photography-grid.component.scss
+++ b/src/app/photography-page/photography-grid/photography-grid.component.scss
@@ -43,6 +43,7 @@
 			overflow: hidden;
 			cursor: pointer;
 			position: relative;
+			touch-action: auto !important;
 
 			img, video {
 				width: 100%;
@@ -90,6 +91,7 @@
 			max-width: 100%;
 			max-height: 90vh;
 			object-fit:contain;
+			touch-action: auto !important;
 		}
 	}
 
